--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "angular-6-datatable": "^0.8.0",
     "core-js": "^2.5.4",
+    "ng6-breadcrumbs": "^1.0.7",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
